Use valueOf instead of new Integer/Long