@@ -36,7 +36,7 @@ public class Begin implements PaxosMessage {
     }
     
     public int hashCode() {
-    	return new Long(_seqNum).hashCode() ^ new Long(_rndNumber).hashCode();
+    	return Long.valueOf(_seqNum).hashCode() ^ Long.valueOf(_rndNumber).hashCode();
     }
     
     public boolean equals(Object anObject) {
